# dynaconf

./: .gitignore  CHANGELOG.md  Makefile  RELEASING.md  app_test.py  mkdocs.yml  pyproject.toml
dynaconf4/: Justfile  README.md  mkdocs.yml  pyproject.toml  test.sh
dynaconf4/docs/_assets/stylesheets/: custom.css
dynaconf4/docs/dev/architecture/: core.md  introduction.md
dynaconf4/examples/: example.py  example_noschema.py  example_noschema.sh  internal_api.py
dynaconf4/examples/direct_and_environ/: direct_and_environ.py  main.sh
dynaconf4/examples/files_nomerge/: main.py  sample.json
dynaconf4/examples/files_simple_merge/: sample.toml
dynaconf4/examples/files_with_lists/: main.py  sample.toml
dynaconf4/examples/simple_file/: sample.json
dynaconf4/src/_dynaconf/: __init__.py  abstract.py  apply_mtree.py  config.py  create_mtree.py  datastructures.py  load.py  load_registry.py  token_registry.py  tokenize.py  utils.py
dynaconf4/src/dynaconf/: __init__.py  banner.py  core.py  data_structs.py  dynaconf_options.py  environment.py  evaluation.py  loading.py  merging.py  schema.py  user_api.py  validation.py  validator.py
dynaconf4/src/dynaconf_builtin/: __init__.py  abstract.py  apply_mtree.py  create_mtree.py  datastructures.py  registry.py  tokenize.py  utils.py
dynaconf4/src/dynaconflib/: core.py  datastructures.py  entrypoint.py  exceptions.py  registry.py  utils.py
dynaconf4/src/internal_api/: __init__.py  abstract.py  apply_mtree.py  create_mtree.py  datastructures.py  registry.py  tokenize.py
dynaconf4/tests/_tools/: build_testtree.py  regenerate_functional.py  test_build_testtree.py
dynaconf4/tests/internal_api/: test_datastructures.py  test_load.py  test_merge.py  test_tokenize.py
dynaconf4/tests/unit/: conftest.py  test_compat_api.py  test_loading.py
(+115 files in other folders)
