# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "dynaconf"  # REQUIRED, is the only field that cannot be marked as dynamic.
version = "4.0.0.dev0"  # REQUIRED, although can be dynamic
description = "Dynamic configuration management."

readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}

# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
  "rich"
]

# Optional dependencies the project provides. These are commonly 
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
[project.optional-dependencies]
dev = ["pytest", "ruff"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/dynaconf/dynaconf"
"Bug Reports" = "https://github.com/dynaconf/dynaconf/issues"
"Funding" = "https://donate.pypi.org"
"Source" = "https://github.com/dynaconf/dynaconf/"

[tool.ruff]
target-version = "py39"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# docstring-code-format = true
# docstring-code-line-length = "dynamic"
